# DevOpsMicroservicesProject

./: README.md
Openfaas_examples-main/Assignment Template/: README.md
Openfaas_examples-main/Assignment Template/CSharp/: README
infrastructure-main/: secrets-management.md
infrastructure-main/ansible/: README.md  playbook.main.yml
infrastructure-main/gateway/: README.md  block_plugin.yaml  deployment.yaml  ingress.yaml  ingress_block.yaml
infrastructure-main/k8s/: template.yml
infrastructure-main/terraform/: README.md  gke.tf  terraform.tfvars
mail-service-main/app/api/api_v0/: email.py  (+1 more)
repository.autograder-main/: Cargo.toml  Dockerfile  README.md  docker-compose.yml  linelint.yml
repository.autograder-main/kubernetes/: deployment.yml  kustomization.yml  service.yml
repository.autograder-main/migrations/2020-11-25-131307_submissions/: up.sql
repository.autograder-main/migrations/2020-11-25-132543_files/: up.sql
repository.autograder-main/migrations/2020-12-08-103323_files_scheduled/: down.sql  up.sql
repository.autograder-main/migrations/2020-12-09-130139_assignments/: down.sql  up.sql
repository.autograder-main/migrations/2020-12-11-153410_files_validated_and_output/: down.sql  up.sql
repository.autograder-main/src/: auth.rs  config.rs  connection.rs  main.rs  schema.rs
repository.autograder-main/src/assignments/: handler.rs  mod.rs  repository.rs  router.rs
repository.autograder-main/src/files/: handler.rs  mod.rs  repository.rs  router.rs
repository.autograder-main/src/submissions/: handler.rs  mod.rs  repository.rs  router.rs
(+10 files in other folders)
