[package]
name = "repository-microservice"
# version should not be changed manually
version = "0.1.0"
authors = ["do-nat <47325790+do-nat@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.6"
rocket_codegen = "0.4.6"
rocket_cors = "0.5.2"
diesel = { version = "1.4.5", features = ["uuidv07", "postgres", "chrono", "r2d2"] }
dotenv = "0.15.0"
r2d2 = "0.8.9"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
custom_derive = "0.1.7"
uuid = { version = "0.8.1", features = ["serde", "v4"] }
chrono = { version = "0.4.19", features = ["serde"] }
diesel_migrations = "1.4.0"
base64 = "0.13.0"
reqwest = { version = "0.10", features = ["json", "blocking"] }
log = "0.4.11"
jsonwebtoken = "7.2.0"

[dependencies.rocket_contrib]
version = "*"
default-features = false
features = ["json"]
